2004-02-12  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/Makefile.{am,in}:
	  Change CR+LF -> LF due to fatal error

2004-02-12  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c, interface/w32g_res.{h,rc},
	  interface/rtsyn_common.c:
	  Support for 24-bit output in Win32GUI/TWSYNTH interface.
	* timidity/w32g_a.c, timidity/Makefile.{am,in}:
	  Remove w32g_a.c.
	* configs/msc[67]-sjis.txt:
	  Update.
	* timidity/gogo_a.c, timidity/vorbis_a.c:
	  Fix for 24-bit output mode.
	* configs/msc6-project.zip, configs/msc6-sjis.txt:
	  Support for TWSYNG service mode.
	* interface/w32g_utl.[ch], interface/w32g_ini.c,
	  interface/w32g_pref.c, interface/w32g_res.[h,rc],
	  timidity/playmidi.[ch], timidity/mix.c:
	  Support for Surround (opt_pan_delay).
	  Improve opt_pan_delay.

2004-02-12  Kentaro Sato <kentaro@ranvis.com>

	* timidity/output.c: Fixed endian problem of 24-bit output.

2004-02-11  mput <root@mput.dip.jp>

	* configure.in: version to 2.13.0-rc1

2004-02-11  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c, timidity/au_a.c, timidity/mac_a.c,
	  timidity/output.c, timidity/raw_a.c, timidity/wave_a.c
	  Fixes for 24-bit output.

2004-02-11  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix some codes for 24bit output

2004-02-11  Kouji 'kekyo' Suzuki <k@kekyo.net>

	* interface/w32g_syn.c, configs/msc7-project.zip:
	  Support for TWSYNSRV.

2004-02-11  Saito <saito2@digitalme.com>

	* timidity/output.[ch], timidity/wave_a.c,
	  timidity/w32_a.c, timidity/aq.c,
	  timidity/effect.c, timidity/timidity.c, interface/w32g_utl.c:
	  Fix some codes for 24bit output.
	  Swap s32tos24() and s32tos24x().
	* timidity/reverb.[ch], timidity/playmidi.[ch],
	  timidity/mix.c, timidity/sndfont.c,
	  interface/w32g_utl.[ch], interface/w32g_res.rc,
	  interface/w32g_pref.c, interface/w32g_ini.c:
	  Remove opt_effect_quality.
	  Fix typos.

2004-02-10  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c, timidity/w32_gogo.c,
	  timidity/gogo_a.c: